# Cuda3

./: CMakeLists.txt  main.cu
